# tpp_gftree

./: README.md
tpp_android_fetch_src/: README.md  RELEASE  buildAndroid.sh  fetchAndroidSrc.sh
tpp_android_fetch_src/gitfolder/: packed-refs
tpp_android_fetch_src/gitfolder/refs/heads/: master  v1.0_revA
tpp_automake_autoconf_files/: MakeOLD  Makefile_scripts.am  Makefile_src.am  Makefile_src_fw.am  Makefile_src_lib  Makefile_src_lib_slip  README.md  configure.ac
tpp_automake_autoconf_files/gitfolder/: config  index  packed-refs
tpp_automake_autoconf_files/gitfolder/logs/refs/heads/: master
tpp_automake_autoconf_files/gitfolder/logs/refs/remotes/origin/: HEAD  master
tpp_automake_autoconf_files/gitfolder/refs/heads/: master
tpp_fw_src_insert/: README.md
tpp_fw_src_insert/gitfolder/: FETCH_HEAD  config  index  packed-refs
tpp_fw_src_insert/gitfolder/logs/: HEAD
tpp_fw_src_insert/gitfolder/refs/heads/: master
tpp_helper_scripts_for_repo/gitfolder/: config  index  packed-refs
tpp_lib_slip_src_insert/gitfolder/: config  index  packed-refs
tpp_lib_slip_src_insert/gitfolder/logs/: HEAD
tpp_lib_src_insert/gitfolder/: config  index  packed-refs
tpp_lib_src_insert/gitfolder/logs/: HEAD
tpp_repo/: fetchRepo  updateRepo
tpp_repo/gitfolder/: COMMIT_EDITMSG  config  index  packed-refs
tpp_scripts_to_install/gitfolder/: config  index  packed-refs
tpp_scripts_to_install/gitfolder/logs/: HEAD
tpp_software_src_insert/: changeMode.asm
tpp_software_src_insert/gitfolder/: config  index  packed-refs
tpp_software_src_insert/gitfolder/logs/: HEAD
(+22 files in other folders)
